--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+.idea/vcs.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/misc.xml
+src/test/java/DriverConfigurations/chromedriver.exe
